--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Build and deploy GH Pages
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,5 +11,5 @@ jobs:
     - name: build_and_deploy
       uses: shalzz/zola-deploy-action@master
       env:
-        PAGES_BRANCH: master
+        PAGES_BRANCH: main
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
