--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/terminimal"]
-	path = themes/terminimal
-	url = https://github.com/pawroman/zola-theme-terminimal.git
+[submodule "themes/anemone"]
+	path = themes/anemone
+	url = https://github.com/Speyll/anemone
